Issue #2006, adjust spacing

--- a/css/ccap-astronomy.css
+++ b/css/ccap-astronomy.css
@@ -5397,6 +5397,12 @@ div.book > div.chapter > div.titlepage div div > h1.title::after {
 .cnx-eoc.further-exploration > .section > div.body > div.section {
   margin-bottom: 2em;
 }
+.cnx-eoc.further-exploration > .section > div.body > div.section > div.section:not(:last-child) {
+  margin-bottom: 10px;
+}
+.cnx-eoc.further-exploration > .section > div.body > div.section > div.titlepage + div.section {
+  margin-top: 10px;
+}
 .cnx-eoc.further-exploration > .section > div.body div.titlepage h4 {
   color: #77294A;
   font-family: 'Noto Sans', sans-serif, STIXGeneral, STIXSizeOneSym, STIXSize1;
@@ -5409,6 +5415,7 @@ div.book > div.chapter > div.titlepage div div > h1.title::after {
   font-size: 12px;
   color: black;
   font-weight: bold;
+  margin: 0px;
 }
 div.abstract {
   display: none;
