--- a/css/refactor/astronomy-skeleton.less
+++ b/css/refactor/astronomy-skeleton.less
@@ -179,6 +179,10 @@ div.book > div.chapter > div.titlepage {
       > div.title { display: none; }
       > div.body > div.section {
         #part>#chapter-end>#further-exploration>#section>.style();
+        > div.section {
+          &:not(:last-child) { margin-bottom: 10px; }
+        }
+        > div.titlepage + div.section { margin-top: 10px; }
       }
       > div.body div.titlepage h4 {
         #part>#chapter-end>#further-exploration>#section>#title>.style();
