--- a/css/refactor/astronomy-slots.less
+++ b/css/refactor/astronomy-slots.less
@@ -388,6 +388,7 @@
             .font-scale(0);
             color: black;
             font-weight: bold;
+            margin: 0px;
           }
         }
       }
